vlib/v/parser/tests/struct_field_expected.vv
enum TestEnum {
	a b
}

x = {
	.a : 'Alpha'
	.b : 'Beta'
}

